Bruker records for hendelsesDtoene og fjerner bruk av Junit 4.